PathView element's current item changes on insertion.

When inserting an item before the current item update the offset
to ensure the current item doesn't change.

Task-number: QTBUG-21320
Change-Id: I2375bc5098e7f83c33e7a0b123ed1b82f607055f
Reviewed-by: Bea Lam <bea.lam@nokia.com>